' Class Diagram derived from docs/sd/SD-01.puml through SD-08.puml.
' Intent: Show the target structural design for the changed requirements:
' dust-first decision, forward/backward travel direction toggle, 90-degree rotation
' rechecks, Boost only during dust-driven in-place rotation, and TCP simulator integration.
' Scope: Hardware details are represented as interfaces because requirements keep sensor,
' driving, and cleaning devices abstract. Python simulator internals remain external.

@startuml RVC_Class_Diagram
title RVC SW Controller Class Diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty members

package "External Interfaces" as ExternalInterfaces {
  interface "SensorInput" as SensorInput {
    +reportSensorSnapshot(frontObstacleDetected: boolean, backObstacleDetected: BackObstacleInput, dustDetected: boolean)
    +reportFrontObstacleState(frontObstacleDetected: boolean)
    +reportBackObstacleState(backObstacleDetected: BackObstacleInput)
    +reportDustDetected()
  }

  interface "DrivingDevice" as DrivingDevice {
    +moveForward()
    +moveBackward()
    +turnLeft()
    +turnRight()
    +turn(direction: AvoidanceDirection)
    +stop()
  }

  interface "CleaningDevice" as CleaningDevice {
    +setCleaningPower(powerLevel: CleaningPowerLevel)
    +keepCleaningPower(powerLevel: CleaningPowerLevel)
  }
}

package "Transport Adapter" as TransportAdapter {
  class "TcpServer" as TcpServer {
    -host: string
    -port: unsigned short
    -lineHandler: LineHandler
    -startedHandler: StartedHandler
    +run()
  }

  class "TcpServer::Response" as TcpServerResponse {
    -message: string
    -closeSession: boolean
    +message(): string
    +closeSession(): boolean
  }
}

package "Protocol Adapter" as ProtocolAdapter {
  class "CommandHandler" as CommandHandler {
    -application: RobotVacuumApplication
    -parser: CommandParser
    -stateFormatter: StateFormatter
    +handleLine(line: string): CommandResponse
    -handleParsedCommand(command: ParsedCommand): CommandResponse
  }

  class "CommandParser" as CommandParser {
    +parse(line: string): ParseResult
  }

  class "ParsedCommand" as ParsedCommand {
    -type: CommandType
    -frontObstacleDetected: boolean
    -backObstacleDetected: BackObstacleInput
    -dustDetected: boolean
    +type(): CommandType
  }

  class "ParseResult" as ParseResult {
    -command: ParsedCommand
    -error: ParseError
    -ok: boolean
    +ok(): boolean
    +command(): ParsedCommand
    +error(): ParseError
  }

  class "CommandResponse" as CommandResponse {
    -text: string
    -closeSession: boolean
    +text(): string
    +closeSession(): boolean
  }

  class "StateFormatter" as StateFormatter {
    +format(snapshot: ControllerStateSnapshot): string
  }
}

package "Simulation Support" as SimulationSupport {
  class "RobotVacuumApplication" as RobotVacuumApplication {
    -drivingDevice: RecordingDrivingDevice
    -cleaningDevice: RecordingCleaningDevice
    -controller: RVCSWController
    -frontObstacleDetected: boolean
    -backObstacleDetected: BackObstacleInput
    -dustDetected: boolean
    +reset()
    +setSensorSnapshot(frontDetected: boolean, backDetected: BackObstacleInput, dustDetected: boolean)
    +setFrontObstacle(detected: boolean)
    +setBackObstacle(detected: BackObstacleInput)
    +setObstacleState(frontDetected: boolean, backDetected: BackObstacleInput, leftDetected: boolean)
    +reportDustDetected()
    +snapshot(): ControllerStateSnapshot
  }

  class "ControllerStateSnapshot" as ControllerStateSnapshot {
    -movementStatus: MovementStatus
    -travelDirection: TravelDirection
    -frontObstacleDetected: boolean
    -backObstacleDetected: BackObstacleInput
    -dustDetected: boolean
    -rotationActive: boolean
    -driveCommand: DriveCommand
    -cleaningPower: CleaningPowerState
  }

  class "RecordingDrivingDevice" as RecordingDrivingDevice {
    -lastCommand: DriveCommand
    +moveForward()
    +moveBackward()
    +turnLeft()
    +turnRight()
    +turn(direction: AvoidanceDirection)
    +stop()
    +reset()
    +lastCommand(): DriveCommand
  }

  class "RecordingCleaningDevice" as RecordingCleaningDevice {
    -powerState: CleaningPowerState
    +setCleaningPower(powerLevel: CleaningPowerLevel)
    +reset()
    +powerState(): CleaningPowerState
  }
}

package "Application Controller" as ApplicationController {
  class "RVCSWController" as RVCSWController {
    -sensorState: SensorState
    -automaticCleaning: AutomaticCleaning
    +reportSensorSnapshot(frontObstacleDetected: boolean, backObstacleDetected: BackObstacleInput, dustDetected: boolean)
    +reportFrontObstacleState(frontObstacleDetected: boolean)
    +reportBackObstacleState(backObstacleDetected: BackObstacleInput)
    +reportObstacleState(frontObstacleDetected: boolean, backObstacleDetected: BackObstacleInput, leftObstacleDetected: boolean)
    +reportDustDetected()
    +travelDirection(): TravelDirection
    +isRotationActive(): boolean
    -apply(result: CommandResult)
    -executeMovementCommand(command: MovementCommand)
    -executeCleaningCommand(command: CleaningCommand)
  }
}

package "Domain Model" as DomainModel {
  class "AutomaticCleaning" as AutomaticCleaning {
    -movementStatus: MovementStatus
    -travelDirection: TravelDirection
    -policy: CleaningPolicy
    -rotationContext: RotationContext
    +handleSensorState(sensorState: SensorState): CommandResult
    +handleDustResponseTimeout(): CommandResult
    +travelDirection(): TravelDirection
    +movementStatus(): MovementStatus
    +isRotationActive(): boolean
  }

  class "SensorState" as SensorState {
    -frontObstacleDetected: boolean
    -backObstacleDetected: optional<boolean>
    -leftObstacleDetected: boolean
    -dustDetected: boolean
    +updateSensorSnapshot(frontObstacleDetected: boolean, backObstacleDetected: BackObstacleInput, dustDetected: boolean)
    +updateFrontObstacle(frontObstacleDetected: boolean)
    +updateBackObstacle(backObstacleDetected: boolean)
    +clearBackObstacleState()
    +updateDustDetected(dustDetected: boolean)
    +isDustDetected(): boolean
    +obstacleDetectedIn(direction: TravelDirection): boolean
    +targetSensorIsClear(targetSensor: TargetSensor): boolean
  }

  class "RotationContext" as RotationContext {
    -cause: RotationCause
    -rotationDirection: RotationDirection
    -targetSensor: TargetSensor
    -nextDirection: TravelDirection
  }

  class "CleaningPolicy" as CleaningPolicy {
    -increasedPowerLevel: CleaningPowerLevel
    -increasedPowerDuration: Duration
    +normalPowerLevel(): CleaningPowerLevel
    +increasedPowerLevel(): CleaningPowerLevel
    +increasedPowerDuration(): Duration
  }

  class "MovementCommand" as MovementCommand {
    -commandType: MovementCommandType
    +create(commandType: MovementCommandType): MovementCommand
  }

  class "CleaningCommand" as CleaningCommand {
    -powerLevel: CleaningPowerLevel
    +create(powerLevel: CleaningPowerLevel): CleaningCommand
  }

  class "CommandResult" as CommandResult {
    -movementCommands: List<MovementCommand>
    -cleaningCommand: CleaningCommand
    +none(): CommandResult
    +withMovement(command: MovementCommand): CommandResult
    +withCleaning(command: CleaningCommand): CommandResult
  }
}

package "Value Types" as ValueTypes {
  enum "MovementStatus" as MovementStatus {
    CLEANING
    ROTATING
  }

  enum "TravelDirection" as TravelDirection {
    FORWARD
    BACKWARD
  }

  enum "RotationDirection" as RotationDirection {
    CLOCKWISE
    COUNTER_CLOCKWISE
  }

  enum "RotationCause" as RotationCause {
    DUST
    OBSTACLE
  }

  enum "TargetSensor" as TargetSensor {
    FRONT
    BACK
  }

  enum "MovementCommandType" as MovementCommandType {
    MOVE_FORWARD
    MOVE_BACKWARD
    TURN_CLOCKWISE_90
    TURN_COUNTER_CLOCKWISE_90
  }

  enum "CleaningPowerLevel" as CleaningPowerLevel {
    NORMAL
    BOOST
  }

  enum "CommandType" as CommandType {
    PING
    RESET
    GET_STATE
    SET_SENSOR_SNAPSHOT
    SET_FRONT
    SET_BACK
    SET_LEFT
    SET_OBSTACLES
    DUST_DETECTED
    POWER_TIMEOUT
    QUIT
  }

  enum "BackObstacleInput" as BackObstacleInput {
    CLEAR
    BLOCKED
    UNKNOWN
  }

  enum "ParseError" as ParseError {
    NONE
    UNKNOWN_COMMAND
    INVALID_ARGUMENT
  }

  enum "DriveCommand" as DriveCommand {
    NONE
    MOVE_FORWARD
    MOVE_BACKWARD
    TURN_CLOCKWISE_90
    TURN_COUNTER_CLOCKWISE_90
    STOP
  }

  enum "CleaningPowerState" as CleaningPowerState {
    OFF
    NORMAL
    BOOST
  }
}

TcpServer ..> CommandHandler : invokes line handler
TcpServer ..> TcpServerResponse : writes

CommandHandler *-- CommandParser
CommandHandler *-- StateFormatter
CommandHandler --> RobotVacuumApplication : updates/queries
CommandHandler ..> ParsedCommand : handles
CommandHandler ..> CommandResponse : returns

CommandParser ..> ParseResult : returns
ParseResult --> ParsedCommand : optional command
ParseResult --> ParseError : optional error
ParsedCommand --> CommandType : has
ParsedCommand --> BackObstacleInput : uses
CommandResponse --> TcpServerResponse : adapted by main
StateFormatter ..> ControllerStateSnapshot : formats

RobotVacuumApplication *-- RVCSWController
RobotVacuumApplication *-- RecordingDrivingDevice
RobotVacuumApplication *-- RecordingCleaningDevice
RobotVacuumApplication ..> ControllerStateSnapshot : creates
RobotVacuumApplication --> BackObstacleInput : accepts
RecordingDrivingDevice ..|> DrivingDevice
RecordingCleaningDevice ..|> CleaningDevice
RecordingDrivingDevice --> DriveCommand : records
RecordingCleaningDevice --> CleaningPowerState : records
ControllerStateSnapshot --> MovementStatus : reports
ControllerStateSnapshot --> TravelDirection : reports
ControllerStateSnapshot --> DriveCommand : reports
ControllerStateSnapshot --> CleaningPowerState : reports

SensorInput ..> RVCSWController : reports input to

RVCSWController *-- SensorState
RVCSWController *-- AutomaticCleaning
RVCSWController --> DrivingDevice : sends movement commands
RVCSWController --> CleaningDevice : sends cleaning commands

AutomaticCleaning --> SensorState : reads
AutomaticCleaning *-- CleaningPolicy
AutomaticCleaning *-- RotationContext
AutomaticCleaning ..> MovementCommand : creates
AutomaticCleaning ..> CleaningCommand : creates
AutomaticCleaning ..> CommandResult : returns
AutomaticCleaning --> MovementStatus : has
AutomaticCleaning --> TravelDirection : has

SensorState --> BackObstacleInput : stores
SensorState ..> TravelDirection : evaluates
RotationContext --> RotationCause : stores
RotationContext --> RotationDirection : stores
RotationContext --> TargetSensor : stores
RotationContext --> TravelDirection : stores
CleaningPolicy --> CleaningPowerLevel : defines
CommandResult --> MovementCommand : ordered movement commands
CommandResult --> CleaningCommand : optional
MovementCommand --> MovementCommandType : uses
CleaningCommand --> CleaningPowerLevel : uses

note right of RVCSWController
  Receives external sensor events, updates SensorState,
  asks AutomaticCleaning for command results,
  and executes movement or cleaning device calls.
end note

note bottom of AutomaticCleaning
  Central use-case coordinator derived from SD-01..SD-07.
  It owns travel direction, dust-first decision flow,
  active rotation context, and command creation.
  It does not call external devices directly.
end note

note bottom of RotationContext
  Encapsulates 90-degree rotation state:
  cause, direction, target sensor, and next travel direction.
  Forward cases rotate clockwise and target BACK.
  Backward cases rotate counter-clockwise and target FRONT.
end note

note bottom of ExternalInterfaces
  These represent abstract hardware inputs and outputs.
  Detailed hardware control is outside the current scope.
end note

note bottom of SimulationSupport
  rvc_app support classes adapt TCP commands from the Python simulator
  or system test client into controller inputs, then expose a state snapshot.
  Map physics and rendering remain Python-side concerns.
end note

@enduml
